# mainsail

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html
mainsail/: __main__.py  cli.py  registry.py  usage.py
mainsail/applets/: awk.py  base64.py  basename.py  cat.py  chmod.py  cmp.py  column.py  comm.py  completions.py  cp.py  cut.py  date.py  dd.py  df.py  diff.py  dig.py  dirname.py  du.py  env.py  expand.py  find.py  fmt.py  fold.py  getopt.py  grep.py  groups.py  gunzip.py  gzip.py  head.py  hexdump.py  hostname.py  http.py  id.py  install_aliases.py  join.py  jq.py  ln.py  ls.py  md5sum.py  mkdir.py  (+42 more)
pybox/: __main__.py  cli.py  common.py  registry.py  usage.py
pybox/applets/: basename.py  cat.py  chmod.py  cp.py  cut.py  date.py  df.py  dirname.py  du.py  echo.py  env.py  false.py  find.py  grep.py  gunzip.py  gzip.py  head.py  hostname.py  ln.py  ls.py  md5sum.py  mkdir.py  mv.py  printf.py  pwd.py  realpath.py  rm.py  sed.py  seq.py  sha1sum.py  sha256sum.py  sha512sum.py  sleep.py  sort.py  stat.py  tail.py  tar.py  tee.py  touch.py  tr.py  (+8 more)
scripts/: stress.py
tests/: conftest.py  test_applets.py
